--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="card-heading"></div>
                 <div class="card-body">
                     <h2 class="title">Registration Form</h2>
-                    <form method="post" name = "registrform" id="ajax_form" action="" >
+                    <form method="POST" name = "registrform" id="ajax_form" action="" >
                         <div class="input-group">
                             <input  id="name" class="input--style-2" type="text" placeholder="Name" name="name">
                         </div>
